--- a/libs/ui/src/lib/sidebar/sidebar.component.html
+++ b/libs/ui/src/lib/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
     <a class="active" href="#home">Home</a>
-    <a href="#Pokelist">Pokemon List</a>
-    <a href="#Digilist">Digimon List</a>
+    <button routerlink="/todos">Pokemon List</button>
+    <button routerlink="/fordos">Digimon List</button>
     <a href="#App3">App3</a>
   </div>
